# robocrisp-base

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.md.txt  robocrisp-bootstrap.yaml
camera-package/: crispcam-daemon.initscript  crispcam.gemspec
camera-package/lib/: crispcam.rb
camera-package/lib/crispcam/: Sink.rb  Source.rb  util.rb
camera-package/lib/proxy/: Client.rb  MessagePasser.rb  ObjectNode.rb  Server.rb
cmake/: RaspberryPiToolchain.cmake
include/crisp/input/: Axis.hh  Controller.hh  EvDevController.hh  MappedEventSource.hh
include/crisp/util/: ArrayAccessor.hh
src/input/: Axis.cc  Controller.cc  EvDevController.cc
tests/control-test/: CMakeLists.txt  README.md  control-test.yaml  gnublin_i2c.cpp  gnublin_i2c.hpp  node.cc
tests/control-test/rgb-i2c/: rgb-i2c.ino
tests/drive-test/: CMakeLists.txt  drive-test.yaml  gnublin_i2c.cpp  gnublin_i2c.hpp  node.cc
tests/drive-test/Chassis_Control/: ChassisData.h  Chassis_Control.ino  DriveData.h
tests/drive-test/Chassis_Control_Serial/: Chassis_Control_Serial.ino
tests/light sensor test/: SFE_TSL2561_test.ino
